--- a/products.html
+++ b/products.html
@@ -153,6 +153,20 @@
       font-size: 14px;
       color: #777;
     }
+
+    .free {
+      opacity: 0.8;
+    }
+
+    .section-title {
+      text-align: left;
+      font-size: 1.3rem;
+      color: var(--link-hover-color);
+      margin-top: 30px;
+      margin-bottom: 10px;
+      border-left: 3px solid var(--link-color);
+      padding-left: 10px;
+    }
   </style>
 </head>
 <body>
@@ -168,36 +182,31 @@
   <main id="main-content">
     <h2>Explore Developer Tools by CodeTweakrs</h2>
 
+    <div class="section-title">Premium Product</div>
     <div class="products">
-
       <div class="card">
         <h3>SysDash</h3>
         <p>A modern system monitoring dashboard for Windows with license validation, real-time stats, and Firebase integration.</p>
         <div class="price">$9.99</div>
         <a href="#" class="btn">Buy License</a>
       </div>
+    </div>
 
-      <div class="card">
+    <div class="section-title">Free Tools</div>
+    <div class="products">
+      <div class="card free">
         <h3>CashCubby</h3>
-        <p>A personal finance tracker that lets you visualize your savings, goals, and spending habits — clean, secure, and cloud-synced.</p>
-        <div class="price">$4.99</div>
-        <a href="#" class="btn">Buy License</a>
+        <p>A personal finance tracker that helps you visualize your savings, goals, and spending habits — free and open to use.</p>
+        <div class="price">Free</div>
+        <a href="https://codetweakrs.net/cashcubby" class="btn">Visit Page</a>
       </div>
 
-      <div class="card">
+      <div class="card free">
         <h3>LiveDash</h3>
-        <p>A lightweight local dashboard for monitoring your CPU, RAM, and disk performance in real-time with customizable UI.</p>
-        <div class="price">$7.99</div>
-        <a href="#" class="btn">Buy License</a>
+        <p>A lightweight local dashboard for monitoring your CPU, RAM, and disk usage in real time — no install required.</p>
+        <div class="price">Free</div>
+        <a href="https://codetweakrs.net/livedash" class="btn">Visit Page</a>
       </div>
-
-      <div class="card">
-        <h3>Ultimate Tool Pack</h3>
-        <p>A bundled suite of essential dev and system utilities — optimized for productivity, security, and speed.</p>
-        <div class="price">$14.99</div>
-        <a href="#" class="btn">Buy License</a>
-      </div>
-
     </div>
   </main>
 
