Update product pricing and links in products.html

--- a/products.html
+++ b/products.html
@@ -155,7 +155,7 @@
     }
 
     .free {
-      opacity: 0.8;
+      opacity: 0.9;
     }
 
     .section-title {
@@ -187,8 +187,8 @@
       <div class="card">
         <h3>SysDash</h3>
         <p>A modern system monitoring dashboard for Windows with license validation, real-time stats, and Firebase integration.</p>
-        <div class="price">$9.99</div>
-        <a href="#" class="btn">Buy License</a>
+        <div class="price">$5.99</div>
+        <a href="https://codetweakrs.shop/sysdash" class="btn">Buy License</a>
       </div>
     </div>
 
@@ -198,14 +198,7 @@
         <h3>CashCubby</h3>
         <p>A personal finance tracker that helps you visualize your savings, goals, and spending habits — free and open to use.</p>
         <div class="price">Free</div>
-        <a href="https://codetweakrs.net/cashcubby" class="btn">Visit Page</a>
-      </div>
-
-      <div class="card free">
-        <h3>LiveDash</h3>
-        <p>A lightweight local dashboard for monitoring your CPU, RAM, and disk usage in real time — no install required.</p>
-        <div class="price">Free</div>
-        <a href="https://codetweakrs.net/livedash" class="btn">Visit Page</a>
+        <a href="https://kaloyansys32.github.io/cashcubby/" class="btn">View Tool</a>
       </div>
     </div>
   </main>
