Fix link typo for CashCubby tool

--- a/products.html
+++ b/products.html
@@ -198,7 +198,7 @@
         <h3>CashCubby</h3>
         <p>A personal finance tracker that helps you visualize your savings, goals, and spending habits — free and open to use.</p>
         <div class="price">Free</div>
-        <a href="https://kaloyansys32.github.io/cashcubby/" class="btn">View Tool</a>
+        <a href="https://kaloyansys32.github.io/cashcabby/" class="btn">View Tool</a>
       </div>
     </div>
   </main>
