Update product titles and pricing in products.html

--- a/products.html
+++ b/products.html
@@ -182,14 +182,30 @@
   <main id="main-content">
     <h2>Explore Developer Tools by CodeTweakrs</h2>
 
-    <div class="section-title">Premium Product</div>
+    <div class="section-title">Premium Products</div>
     <div class="products">
+
       <div class="card">
         <h3>SysDash</h3>
         <p>A modern system monitoring dashboard for Windows with license validation, real-time stats, and Firebase integration.</p>
-        <div class="price">$5.99</div>
-        <a href="https://codetweakrs.shop/sysdash" class="btn">Buy License</a>
+        <div class="price">€2</div>
+        <a href="https://ko-fi.com/s/313e6a0e9e" class="btn" target="_blank">Buy on Ko-fi</a>
       </div>
+
+      <div class="card">
+        <h3>SysTweak</h3>
+        <p>An advanced Windows optimization suite with system cleanup, registry tweaks, and startup management tools.</p>
+        <div class="price">€5</div>
+        <a href="https://ko-fi.com/s/38340da6aa" class="btn" target="_blank">Buy on Ko-fi</a>
+      </div>
+
+      <div class="card">
+        <h3>CT-Cleaner</h3>
+        <p>A lightweight Windows cleaner that removes junk files, temp data, and cache to boost performance instantly.</p>
+        <div class="price">€3</div>
+        <a href="https://ko-fi.com/s/24fe1214b4" class="btn" target="_blank">Buy on Ko-fi</a>
+      </div>
+
     </div>
 
     <div class="section-title">Free Tools</div>
